# pydesk

./: README.md  pyproject.toml
pydesk/: main.py
